test/Fail/TrustMe.err
TrustMe.agda:16.29-33: error: [UnequalTerms]
sym (sym primTrustMe) != primTrustMe of type x ≡ y
when checking that the expression refl has type sym (sym eq) ≡ eq
